# rust-gql

./: .env  Cargo.toml  README.md  configuration.yaml
migrations/: 20201015211037_create_todo_table.sql
src/: gql_type.rs  graphql_schema.rs  interface_todo.rs  lib.rs  main.rs  result.rs  startup.rs  todo.rs
