[package]
name = "app"
version = "0.1.0"
authors = ["benjamin <benjamin@gnbit.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-cors = "0.2.0"
env_logger = "0.7.1"
tokio = "0.2.22"
config = "0.10.1"
serde = "1.0.116"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
sqlx-core ={ version = "0.4.0-beta.1", default-features=false, features = ["sqlite", "uuid", "bigdecimal", "chrono"] }

async-graphql = "2.0.2"
async-graphql-actix-web = "2.0.2"

anyhow = "1.0.33"
thiserror = "1.0.16"

dotenv = "0.15.0"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["json"] }